--- a/src/styles.css
+++ b/src/styles.css
@@ -21,6 +21,18 @@ section, header {
     margin: 0 auto;
 }
 
+header h1 {
+    margin-bottom: 4px;
+}
+
+header h1 span {
+    color: #995000;
+}
+
+section {
+    margin-bottom: 24px;
+}
+
 section h2 {
     background-color: #FED7AA;
     padding: 8px 16px ;
@@ -35,4 +47,8 @@ ul li {
 
 li .details {
     max-width: 240px;
+}
+
+.details h3 {
+    margin-bottom: 8px;
 }
